<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="300dp"
            android:src="@drawable/me"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/text_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Name-->
        <TextView
            android:id="@+id/tv_name_label"
            style="@style/ProfileText"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/text_name"
            app:layout_constraintEnd_toStartOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_edward_muturi"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            style="@style/ProfileText"
            app:layout_constraintStart_toEndOf="@id/tv_name_label"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />
        <!--Track-->
        <TextView
            android:id="@+id/tv_track_label"
            android:layout_width="@dimen/dimen_0dp"
            style="@style/ProfileText"
            android:layout_height="wrap_content"
            android:hint="@string/text_track"
            app:layout_constraintEnd_toStartOf="@id/tv_track"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label" />

        <TextView
            android:id="@+id/tv_track"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_track_android"
            style="@style/ProfileText"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_track_label"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <!--Country-->
        <TextView
            android:id="@+id/tv_country_label"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:hint="@string/text_country"
            style="@style/ProfileText"
            app:layout_constraintEnd_toStartOf="@id/tv_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_track_label" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_country_name"
            style="@style/ProfileText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintStart_toEndOf="@id/tv_country_label"
            app:layout_constraintTop_toBottomOf="@id/tv_track" />
        <!--Email-->
        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            style="@style/ProfileText"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country_label" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_email_sample"
            android:layout_marginTop="@dimen/dimen_20dp"
           android:fontFamily="@font/comfortaa"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_email_label"
            app:layout_constraintTop_toBottomOf="@id/tv_country" />
        <!--Phone-->
        <TextView
            android:id="@+id/tv_phone_label"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_phone"
            style="@style/ProfileText"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toStartOf="@id/tv_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            style="@style/ProfileText"
            android:hint="@string/text_phone_sample"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_phone_label"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>